# VisionInterpretability

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: README.md  performance_optimization.md
notebooks/: Segment_2_canonical.ipynb  Segment_2_canonical_Windows.ipynb  Segment_3_canonical_Windows.ipynb  cataluna84__segment_1_intro.ipynb  cataluna84__segment_2_activation_max.ipynb  cataluna84__segment_2_activation_max_canonical.ipynb  cataluna84__segment_3_dataset_images.ipynb  cataluna84__segment_3_dataset_images_2.ipynb  cataluna84__segment_3_dataset_images_imagenet_validation.ipynb
scripts/: add_append_cell.py  add_circuit_visualization.py  add_colab_support_seg3.py  add_data_dir_param.py  add_device_definition.py  add_experiment_log.py  add_master_log.py  add_metrics_table.py  add_pass2_checkpoint.py  add_performance_docs.py  add_plotly_setup.py  add_run001_row.py  add_setup_cell_seg2.py  add_shard_verification.py  add_threaded_prefetch.py  add_wandb_chart.py  analyze_flow.py  analyze_notebook_structure.py  check_gpu.py  complete_restructure.py  enhance_notebook_theory.py  fix_animate_sequence.py  fix_broken_cells.py  fix_guard_placement.py  fix_heaps_and_diagnostic.py  fix_log_table.py  fix_markdown_refs.py  fix_notebook_comments.py  fix_notebook_errors.py  fix_unicode_quotes.py  fix_windows_streaming.py  generate_notebook.py  remove_data_dir_param.py  resize_plotly_canvas.py  switch_to_local_dataset.py  update_experiment_log_v2.py  update_image_size.py  update_image_size_seg2.py  update_notebook.py  update_notebook_colab.py  (+3 more)
src/segment_1_intro/: data.py  (+3 more)
(+10 files in other folders)
