[project]
name = "vision-interpretability"
version = "0.1.0"
description = "Decoding CNNs with PyTorch and InceptionV1"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch>=2.5.0",
    "torchvision>=0.20.0",
    "matplotlib>=3.9.0",
    "numpy>=2.0.0",
    "pillow>=10.4.0",
    "jupyterlab>=4.2.0",
    "pandas>=2.2.0",
    "scipy>=1.14.0",
    "requests>=2.32.0",
    "tqdm>=4.66.0",
    "scikit-learn>=1.5.0",
    "captum>=0.7.0",
    "datasets>=2.20.0",
    "ipywidgets>=8.1.0",
    "opencv-python>=4.13.0.90",
    "python-dotenv>=1.2.1",
    "timm>=1.0.24",
    "torch-lucent>=0.1.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/segment_1_intro"]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch" }]
torchvision = [{ index = "pytorch" }]
